<resources>

    <string-array name="data_name">
        <item>Burger</item>
        <item>Pizza</item>
        <item>Salad</item>
        <item>Soto</item>
        <item>Bakso</item>
        <item>Noodle</item>
        <item>Juice</item>
        <item>Satay</item>
    </string-array>

    <integer-array name="data_price">
        <item>10000</item>
        <item>15000</item>
        <item>20000</item>
        <item>15000</item>
        <item>10000</item>
        <item>50000</item>
        <item>15000</item>
        <item>20000</item>
    </integer-array>

    <integer-array name="data_photo">
        <item>@drawable/burger</item>
        <item>@drawable/pizza</item>
        <item>@drawable/salad</item>
        <item>@drawable/soto</item>
        <item>@drawable/bakso</item>
        <item>@drawable/noodle</item>
        <item>@drawable/jus</item>
        <item>@drawable/satay</item>
    </integer-array>

    <string-array name="data_description">
        <item>A huge single or triple burger with all the fixings, cheese, lettuce, tomato, onions and special sauce or mayonnaise!</item>
        <item>A flat, open-faced baked pie of Italian origin, consisting of a thin layer of bread dough topped with spiced tomato sauce and cheese, often garnished with anchovies, sausage slices, mushrooms, etc.</item>
        <item>A visually captivating culinary masterpiece that combines crisp greens, vibrant vegetables, proteins, crunchy croutons, and velvety dressing to create a harmonious and unforgettable gastronomic experience.</item>
        <item>A cherished Indonesian soup, features a fragrant broth infused with lemongrass and spices, tender chicken or beef, delicate noodles, and a medley of garnishes, offering a flavorful journey through Indonesian culinary traditions in a bowl.</item>
        <item>A quintessential Indonesian street food, boasts a flavorful broth infused with aromatic spices, tender meatballs, springy noodles, and a medley of condiments, creating a symphony of taste and tradition in a single bowl.</item>
        <item>A global culinary staple, are a versatile canvas for culinary creativity, offering a comforting and satisfying foundation for a myriad of flavors and textures.</item>
        <item>A refreshing elixir of natures bounty, captures the essence of ripe fruits and vibrant vegetables, offering a vibrant burst of flavor and a healthy dose of nourishment in every sip.</item>
        <item>A beloved Indonesian delight, showcases succulent skewered meats, marinated to perfection and grilled over open flames, while bathed in a fragrant peanut sauce, creating a tantalizing fusion of smoky, sweet, and savory flavors that transport your taste buds to exotic destinations</item>
    </string-array>

    <string-array name="data_star">
        <item>4.8</item>
        <item>4.7</item>
        <item>4.9</item>
        <item>4.4</item>
        <item>4.5</item>
        <item>4.8</item>
        <item>4.6</item>
        <item>5.0</item>
    </string-array>

    <string-array name="data_address">
        <item>Jl. Kemang Raya No.77, RT.4/RW.2, Bangka, Kec. Mampang Prpt., Kota Jakarta Selatan, Daerah Khusus Ibukota Jakarta 12730</item>
        <item>Jl. M.H. Thamrin No.28 – 30, RT.9/RW.5, Gondangdia, Kec. Menteng, Kota Jakarta Pusat, Daerah Khusus Ibukota Jakarta 10350</item>
        <item>Jl. M.H. Thamrin No.1, Kb. Melati, Kec. Menteng, Kota Jakarta Pusat, Daerah Khusus Ibukota Jakarta 10230</item>
        <item>Ps. Slipi, Jl. Anggrek Garuda D/I No.4, RT.4/RW.2, Kemanggisan, Kec. Palmerah, Kota Jakarta Barat, Daerah Khusus Ibukota Jakarta 11480</item>
        <item>Jl. Aip II Karel Sat-Suit Tubun IIB No.5A, RT.7/RW.2, Slipi, Kec. Palmerah, Kota Jakarta Barat, Daerah Khusus Ibukota Jakarta 11410</item>
        <item>Jl. Tanjung Duren Raya No.135a, Tj. Duren Sel., Kec. Grogol petamburan, Kota Jakarta Barat, Daerah Khusus Ibukota Jakarta 11470</item>
        <item>Taman S. Parman No.3, RT.6/RW.16, Tomang, Kec. Grogol petamburan, Kota Jakarta Barat, Daerah Khusus Ibukota Jakarta 11440</item>
        <item>Jl. Kembangan Raya No.24, RT.1/RW.2, Kembangan Sel., Kec. Kembangan, Kota Jakarta Barat, Daerah Khusus Ibukota Jakarta 11610</item>
    </string-array>

    <string name="app_name" translatable="false">chall3</string>
    <string name="hello_binarian">Hello Binarian,</string>
    <string name="feeling_hungry">Feeling hungry?</string>
    <string name="for_you">For you:</string>
    <string name="account_image">Account Image</string>
    <string name="cart_image">Cart Image</string>
    <string name="order_now">Treat yourself with the best deal!</string>
    <string name="banner_image">Banner Image</string>
    <string name="food_image">Food Image</string>
    <string name="category">Category:</string>
    <string name="_10_000" translatable="false">10.000</string>
    <string name="burger">Burger</string>
    <string name="price">Price</string>
    <string name="description">Description</string>
    <string name="location">Location</string>
    <string name="location_description">Location Description</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="total">Total:</string>
    <string name="rp">IDR</string>
    <string name="add" translatable="false">+</string>
    <string name="_1" translatable="false">1</string>
    <string name="minus" translatable="false">-</string>
    <string name="free_delivery">FREE DELIVERY!</string>
    <string name="order">Order now</string>
    <string name="_4_8" translatable="false">4.8</string>
    <string name="see_on_map">See on map</string>
    <string name="home_fragment">Home</string>
    <string name="cart_fragment">Cart</string>
    <string name="profile_fragment">Profile</string>
    <string name="this_profile_fragment" translatable="false">Profile fragment</string>
    <string name="this_cart_fragment" translatable="false">Cart fragment</string>
    <string name="delivery_method">Delivery method</string>
    <string name="take_away">Take away</string>
    <string name="delivery">Delivery</string>
    <string name="payment_method">Payment method</string>
    <string name="cash">Cash</string>
    <string name="e_wallet" translatable="false">E-wallet</string>
    <string name="place_order">Order</string>
    <string name="notes">Notes</string>
    <string name="note_for">Note for your order (25 characters max)</string>
    <string name="ok">OK</string>
    <string name="username" translatable="false">Username</string>
    <string name="password" translatable="false">Password</string>
    <string name="email" translatable="false">Email</string>
    <string name="profile_image">Profile Image</string>
    <string name="phone" translatable="false">Phone</string>
    <string name="payment_detail">Payment detail</string>
    <string name="total_payment">Total payment:</string>
    <string name="oopss" translatable="false">Oopss!</string>
    <string name="there_is_no">Currently there is no item in your cart</string>
    <string name="pay_now">Pay now</string>
    <string name="yeay">Yeay!</string>
    <string name="payment_successful">Payment successful</string>
    <string name="order_is_complete">Your order is complete</string>
    <string name="back_to_home">Back to home</string>
    <string name="item_added">Item added to cart.</string>
    <string name="see_now">See now</string>
    <string name="dark_mode">Dark mode</string>
    <string name="language">Language</string>
    <string name="v_69_69" translatable="false">v.69</string>
    <string name="warung_binar" translatable="false">Warung Binar</string>

</resources>