<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_hello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_binarian"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"/>

    <TextView
        android:id="@+id/tv_feeling"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feeling_hungry"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@id/tv_hello"
        app:layout_constraintTop_toBottomOf="@id/tv_hello" />

    <ImageView
        android:id="@+id/iv_account"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:contentDescription="@string/account_image"
        android:src="@drawable/ic_account"
        app:layout_constraintEnd_toEndOf="@id/cv_banner"
        app:layout_constraintTop_toTopOf="@id/tv_hello"
        app:tint="@color/light_magenta"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/iv_cart"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/cart_image"
        android:src="@drawable/ic_cart"
        app:layout_constraintEnd_toStartOf="@id/iv_account"
        app:layout_constraintTop_toTopOf="@id/iv_account"
        app:tint="@color/light_magenta"
        tools:ignore="ImageContrastCheck" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_banner"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:layout_constraintTop_toBottomOf="@id/tv_feeling"
        android:layout_marginTop="20dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:backgroundTint="@color/light_magenta"
        app:cardCornerRadius="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_inside"
                android:layout_width="120dp"
                android:layout_height="120dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginStart="20dp"
                android:src="@drawable/burger"
                android:contentDescription="@string/banner_image" />

            <TextView
                android:id="@+id/tv_discount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/discount_30"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/black"
                app:layout_constraintTop_toTopOf="@id/iv_inside"
                app:layout_constraintStart_toEndOf="@id/iv_inside"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"/>

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="20dp"
                android:textColor="@color/black"
                android:text="@string/order_now"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/iv_inside"
                app:layout_constraintTop_toBottomOf="@id/tv_discount"
                tools:ignore="TextSizeCheck" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/cv_banner"
        app:layout_constraintStart_toStartOf="@id/cv_banner"
        android:layout_marginTop="30dp"
        android:text="@string/category"
        android:textStyle="bold"
        android:textSize="18sp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_horizontal"
        android:layout_width="0dp"
        android:layout_height="70dp"
        app:layout_constraintTop_toBottomOf="@id/tv_category"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"/>

    <TextView
        android:id="@+id/tv_for"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/for_you"
        android:textStyle="bold"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/rv_horizontal"
        app:layout_constraintStart_toStartOf="@id/cv_banner"
        android:layout_marginTop="20dp"/>

    <ImageView
        android:id="@+id/iv_toggle"
        android:layout_width="25dp"
        android:layout_height="25dp"
        app:layout_constraintTop_toTopOf="@id/tv_for"
        app:layout_constraintEnd_toEndOf="@id/cv_banner"
        android:src="@drawable/ic_list"
        android:importantForAccessibility="no" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_vertical"
        android:layout_width="0dp"
        android:layout_height="350dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toBottomOf="@id/tv_for"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>