<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_image"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="@color/light_magenta"
            android:importantForAccessibility="no"
            android:src="@drawable/burger"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ImageContrastCheck" />

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/black" />

        <TextView
            android:id="@+id/tv_food_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/burger"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_image" />

        <TextView
            android:id="@+id/tv_food_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/price"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_image" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rp"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/tv_food_price"
            app:layout_constraintTop_toTopOf="@id/tv_food_price" />

        <TextView
            android:id="@+id/tv_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_food_name" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="6dp"
            android:layout_marginTop="20dp"
            app:dividerColor="@color/light_grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_desc" />

        <ImageView
            android:id="@+id/iv_store"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_store"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider" />

        <TextView
            android:id="@+id/tv_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/location"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/iv_store"
            app:layout_constraintTop_toTopOf="@id/iv_store" />

        <TextView
            android:id="@+id/tv_location_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location_description"
            app:layout_constraintStart_toStartOf="@id/tv_location"
            app:layout_constraintTop_toBottomOf="@id/tv_location" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="6dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="80dp"
            app:dividerColor="@color/light_grey"
            app:layout_constraintBottom_toTopOf="@id/bt_cart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_cart"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="10dp"
            android:text="@string/add_to_cart"
            android:textColor="@color/light_yellow"
            android:textSize="20sp"
            android:textStyle="bold"
            app:backgroundTint="@color/light_magenta"
            app:cornerRadius="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="VisualLintButtonSize,TextContrastCheck" />

        <TextView
            android:id="@+id/tv_rp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/rp"
            android:textColor="@color/light_magenta"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/bt_cart"
            app:layout_constraintStart_toStartOf="@id/bt_cart"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/tv_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="16dp"
            android:text="@string/total"
            android:textColor="@color/light_magenta"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/bt_cart"
            app:layout_constraintStart_toEndOf="@id/tv_rp"
            tools:ignore="TextContrastCheck" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_plus"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginBottom="20dp"
            android:insetLeft="0dp"
            android:insetTop="0dp"
            android:insetRight="0dp"
            android:insetBottom="0dp"
            android:padding="0dp"
            android:text="@string/add"
            android:textSize="20sp"
            android:textStyle="bold"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            app:layout_constraintBottom_toTopOf="@id/bt_cart"
            app:layout_constraintEnd_toEndOf="@id/bt_cart"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.Button.Circle"
            app:strokeColor="@color/light_magenta"
            app:strokeWidth="2dp"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/tv_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="20dp"
            android:text="@string/_1"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/bt_cart"
            app:layout_constraintEnd_toStartOf="@id/bt_plus"
            app:layout_constraintTop_toTopOf="@id/bt_plus" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_min"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="20dp"
            android:insetLeft="0dp"
            android:insetTop="0dp"
            android:insetRight="0dp"
            android:insetBottom="0dp"
            android:padding="0dp"
            android:text="@string/minus"
            android:textSize="20sp"
            android:textStyle="bold"
            app:cornerRadius="20dp"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            app:layout_constraintBottom_toTopOf="@id/bt_cart"
            app:layout_constraintEnd_toStartOf="@id/tv_number"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.Button.Circle"
            app:strokeColor="@color/light_magenta"
            app:strokeWidth="2dp"
            tools:ignore="TouchTargetSizeCheck" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>