<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="110dp"
    android:layout_margin="20dp"
    android:backgroundTint="@color/lighter_magenta"
    android:padding="10dp"
    app:cardCornerRadius="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_food"
            android:layout_width="110dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/food_image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ImageContrastCheck"
            tools:src="@drawable/burger" />

        <ImageView
            android:id="@+id/iv_delete"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_delete"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/orange_dark"
            tools:ignore="ImageContrastCheck" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_min"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginEnd="10dp"
            android:insetLeft="0dp"
            android:insetTop="0dp"
            android:insetRight="0dp"
            android:insetBottom="0dp"
            android:padding="0dp"
            android:text="@string/minus"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            app:cornerRadius="20dp"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            app:layout_constraintEnd_toStartOf="@id/tv_number"
            app:layout_constraintTop_toTopOf="@id/bt_plus"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.Button.Circle"
            app:strokeColor="@color/light_magenta"
            app:strokeWidth="2dp"
            tools:ignore="TouchTargetSizeCheck,TextSizeCheck,TextContrastCheck" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_plus"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/light_magenta"
            android:insetLeft="0dp"
            android:insetTop="0dp"
            android:insetRight="0dp"
            android:insetBottom="0dp"
            android:padding="0dp"
            android:text="@string/add"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold"
            app:cornerRadius="20dp"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_delete"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.Button.Circle"
            app:strokeColor="@color/light_magenta"
            app:strokeWidth="2dp"
            tools:ignore="TouchTargetSizeCheck,TextSizeCheck,TextContrastCheck" />

        <TextView
            android:id="@+id/tv_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="20dp"
            android:text="@string/_1"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/bt_plus"
            app:layout_constraintTop_toTopOf="@id/bt_plus" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_star"
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            android:layout_width="50dp"
            android:layout_height="32dp"
            android:layout_marginBottom="2dp"
            android:text="@string/_4_8"
            android:textColor="@color/black"
            android:textSize="10sp"
            app:backgroundTint="@color/white"
            app:cornerRadius="10dp"
            app:icon="@drawable/ic_stars"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            app:iconSize="15dp"
            app:iconTint="@color/orange_dark"
            app:layout_constraintBottom_toBottomOf="@id/iv_food"
            app:layout_constraintEnd_toEndOf="@id/iv_food"
            app:layout_constraintStart_toStartOf="@id/iv_food"
            tools:ignore="SmallSp,TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/tv_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/iv_food"
            app:layout_constraintTop_toTopOf="@id/iv_food"
            tools:ignore="SmallSp"
            tools:text="Burger" />

        <TextView
            android:id="@+id/tv_rp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/rp"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@id/tv_desc"
            app:layout_constraintTop_toBottomOf="@id/tv_desc" />

        <TextView
            android:id="@+id/tv_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/_10_000"
            android:textColor="@color/orange_dark"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/tv_rp"
            app:layout_constraintTop_toBottomOf="@id/tv_desc"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/tv_note"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@android:drawable/editbox_background"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/notes"
            android:textColor="@color/black"
            android:textSize="10sp"
            app:layout_constraintStart_toStartOf="@id/tv_rp"
            app:layout_constraintTop_toBottomOf="@id/tv_rp"
            tools:ignore="SmallSp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>