<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="130dp"
    android:layout_height="130dp"
    android:layout_margin="20dp"
    android:backgroundTint="@color/lighter_magenta"
    android:padding="10dp"
    app:cardCornerRadius="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_food"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:background="@drawable/delete_background"
            android:contentDescription="@string/food_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ImageContrastCheck"
            tools:src="@drawable/burger" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_star"
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            android:layout_width="50dp"
            android:layout_height="32dp"
            android:text="@string/_4_8"
            android:textColor="@color/black"
            android:textSize="10sp"
            app:backgroundTint="@color/white"
            app:cornerRadius="10dp"
            app:icon="@drawable/ic_stars"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            app:iconSize="15dp"
            app:iconTint="@color/orange_dark"
            app:layout_constraintBottom_toBottomOf="@id/iv_food"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="SmallSp,TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/tv_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_food"
            tools:ignore="SmallSp"
            tools:text="Burger" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_desc">

            <TextView
                android:id="@+id/tv_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_10_000"
                android:textColor="@color/black"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@id/tv_rp"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_rp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rp"
                android:textColor="@color/black"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>